# Chiscode.v2

./: #Dockerfile  . dockerignore  . gitignore  Dockerfile  README.md  build_e2b_templates.py  pyproject.toml
.GitHub/workflows/: ci.yml
.github/workflows/: build_templates.yml  main.yml
app/services/: daytona_service.py
backend/app/: main.py
backend/app/agents/: __init__.py  generation_agent.py  orchestrator.py  stack_advisor.py
backend/app/api/: __init__.py  deps.py  mcp_server.py  plan_guard.py  router.py
backend/app/api/v1/: __init__.py  auth.py  billing.py  deploy.py  preview.py  project.py  projects.py  templates.py  users.py  webhook.py  webhooks.py
backend/app/core/: __init__.py  config.py  logging.py  plan_guard.py  security.py
backend/app/db/: __init__.py  mongodb.py  pinecone_client.py  redis_client.py
backend/app/schemas/: __init__.py  base.py  project.py  projects.py  user.py  users.py
backend/app/services/: billing_service.py  daytona_service.py  deployment_service.py  e2b_service.py  fragments_templates.py  github_service.py  modal_service.py  preview_service.py  project_service.py  quality_pipeline.py  templates_service.py  user_service.py
backend/tests/: test_foundation.py
backend/websocket/: __init__.py  manager.py
frontend/static/: main.css
frontend/static/js/: main.js
frontend/templates/: 404.html  api_keys.html  base.html  billing.html  index.html  pricing.html  profile.html
frontend/templates/auth/: login.html  register.html
frontend/templates/dasboard/: index.html
frontend/templates/dashboard/: index.html  projects.html
frontend/templates/projects/: deploy.html  detail.html
frontend/templates/templates/: index.html
scripts/: mongo-init.js
