[project]
name = "chiscode"
version = "0.1.0"
description = "AI-powered agent builder — natural language to production-ready apps"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ChisCode Team" }]

# ── Runtime dependencies ──────────────────────────────────────
dependencies = [
    # Web Framework
    "fastapi[all]==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",
    "jinja2==3.1.4",
    "aiofiles==24.1.0",
    "websockets==13.1",

    # AI / LLM Orchestration
    "langchain==0.3.7",
    "langchain-core==0.3.19",
    "langchain-mistralai==0.2.1",
    "langgraph==0.2.45",
    "langsmith==0.1.141",

    # Data Validation
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",

    # Databases
    "motor==3.6.0",
    "pymongo==4.10.1",
    "redis[hiredis]==5.2.0",
    "pinecone-client==5.0.1",

    # Auth & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "cryptography==43.0.3",

    # HTTP Client
    "httpx[http2]==0.27.2",

    # Resilience
    "tenacity==9.0.0",

    # Search
    "duckduckgo-search==6.3.7",

    # Utilities
    "orjson==3.10.11",
    "arrow==1.3.0",
    "shortuuid==1.0.13",

    # Logging
    "structlog==24.4.0",
    "rich==13.9.4",
]

# ── Optional dependency groups ────────────────────────────────
[project.optional-dependencies]

dev = [
    "ruff==0.7.4",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "anyio==4.6.2",
    "httpx==0.27.2",
]

lint = [
    "ruff==0.7.4",
    "mypy==1.13.0",
    "types-passlib",
    "types-python-jose",
]

# ── Build system ──────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── uv workspace settings ─────────────────────────────────────
# Install with:  uv sync
# Dev install:   uv sync --extra dev
# Run:           uv run uvicorn app.main:app --reload
[tool.uv]
dev-dependencies = [
    "ruff==0.7.4",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "anyio==4.6.2",
    "httpx==0.27.2",
]

# ── Ruff (linter + formatter, replaces flake8 + black + isort) ─
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "S", "ANN"]
ignore = [
    "E501",    # line too long (ruff format handles this)
    "B008",    # do not perform function calls in default arguments (FastAPI pattern)
    "N806",    # variable in function should be lowercase
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "S101",    # use of assert (needed in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]
"app/main.py" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── Mypy (static type checking) ───────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
